Anonymous players can join by providing a player name #59